--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <h2>
                 <span id="weather"></span> </h2>
-            <h2 id="location">Penisville</h2>
+            <h2 id="location"></h2>
             <h1  ><span id="temp"></span>    <img id="weatherIcon" alt="Weather Icon">
             </h1>
             <div class="border-bottom" id="secondary-info">
