--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="header">
-        <div id="logo"><i class="fa-solid fa-cloud"></i> Weatherge</div>
+        <div id="logo"><i class="fa-solid fa-cloud"></i> Weather</div>
 
         <div id="search">
             <input type="text" placeholder="search location...">
